--- a/6.Contact_Us.html
+++ b/6.Contact_Us.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body bgcolor="black">
+    <body style="background-color: rgba(0, 0, 0, 0.8);">
 
         <nav>
             <ul>
@@ -59,7 +59,7 @@
             src="https://open.spotify.com/embed/track/3KkXRkHbMCARz0aVfEt68P?utm_source=play" 
             width="720" height="380" frameBorder="0"
             allow="autoplay; clipboard-write"></iframe>
-            <p style="color: rgba(255, 255, 255, 0.637);font-size: 20px;font-family: monospace; text-align: center;"> Copyright 2022 ©</p>
+            <p style="color: rgba(255, 255, 255, 0.637);font-size: 20px;font-family: monospace; text-align: center;"> Copyright 2023 ©</p>
 
         </footer>
     </body>
